--- a/event-details.html
+++ b/event-details.html
@@ -26,7 +26,7 @@
                     <h4 class="mb-0">Event Information</h4>
                 </div>
                 <div class="card-body">
-                    <h2 class="mb-4">Groove Regional Championship - Las Vegas</h2>
+                    <h2 class="mb-4 event-title">Groove Regional Championship - Las Vegas</h2>
                     
                     <div class="event-details-list">
                         <div class="detail-item">
@@ -104,28 +104,28 @@
                         <div class="row g-3">
                             <div class="col-6 col-md-4 col-lg-3">
                                 <div class="team-member-card">
-                                    <img src="https://via.placeholder.com/80" alt="Sarah Johnson" class="team-member-avatar">
+                                    <img src="assets/img/team1.jpeg" alt="Sarah Johnson" class="team-member-avatar">
                                     <div class="team-member-name">Sarah Johnson</div>
                                     <div class="team-member-role">Senior Director</div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-4 col-lg-3">
                                 <div class="team-member-card">
-                                    <img src="https://via.placeholder.com/80" alt="Michael Chen" class="team-member-avatar">
+                                    <img src="assets/img/team2.png" alt="Michael Chen" class="team-member-avatar">
                                     <div class="team-member-name">Michael Chen</div>
                                     <div class="team-member-role">Judge</div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-4 col-lg-3">
                                 <div class="team-member-card">
-                                    <img src="https://via.placeholder.com/80" alt="Emily Rodriguez" class="team-member-avatar">
+                                    <img src="assets/img/team3.png" alt="Emily Rodriguez" class="team-member-avatar">
                                     <div class="team-member-name">Emily Rodriguez</div>
                                     <div class="team-member-role">Videographer</div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-4 col-lg-3">
                                 <div class="team-member-card">
-                                    <img src="https://via.placeholder.com/80" alt="David Kim" class="team-member-avatar">
+                                    <img src="assets/img/team1.jpeg" alt="David Kim" class="team-member-avatar">
                                     <div class="team-member-name">David Kim</div>
                                     <div class="team-member-role">Event Coordinator</div>
                                 </div>
