--- a/event-details.html
+++ b/event-details.html
@@ -13,11 +13,22 @@
     <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 <body>
-    <!-- Header Container -->
-    <div id="header-container"></div>
+    <!-- Header Container with Back Button -->
+    <div class="top-app-bar">
+        <button class="btn-back" id="backBtn" title="Back">
+            <i class="bi bi-arrow-left"></i>
+        </button>
+        <div class="top-app-bar-content">
+            <img src="assets/img/logo-dark-onebeat.png" alt="OneBeat" class="app-logo">
+            <h1 id="pageTitle">Event Details</h1>
+        </div>
+        <button class="btn-logout" id="logoutBtn" title="Logout">
+            <i class="bi bi-box-arrow-right"></i>
+        </button>
+    </div>
 
     <!-- Main Content -->
-    <div class="dashboard-container">
+    <div class="dashboard-container event-details-page">
         <div class="dashboard-content">
             
             <!-- Section 1: Event Information -->
@@ -372,8 +383,7 @@
         </div>
     </div>
 
-    <!-- Bottom Navigation Container -->
-    <div id="bottom-nav-container"></div>
+    <!-- Bottom Navigation Hidden on Event Details Page -->
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
