--- a/event-details.html
+++ b/event-details.html
@@ -255,7 +255,7 @@
             <div class="card-full accordion-item">
                 <div class="card-header-full accordion-header" data-bs-toggle="collapse" data-bs-target="#foodInfo">
                     <h4 class="mb-0">
-                        <i class="bi bi-utensils me-2"></i>
+                        <i class="bi bi-cup-hot-fill me-2"></i>
                         Food & Catering
                     </h4>
                     <i class="bi bi-chevron-down accordion-icon"></i>
