--- a/directors-lounge.html
+++ b/directors-lounge.html
@@ -21,7 +21,7 @@
     <div id="header-container"></div>
     
     <!-- Page Container -->
-    <div class="dashboard-container event-details-page">
+    <div class="dashboard-container">
         <div class="dashboard-content-full">
             
             <!-- Event Header -->
